@@ -2,6 +2,8 @@
 	and calculates the variance, rather than calculating the variance then using the
 	delta method.  Allows geometric means to exactly match SAS/SUDAAN (for Robert Baskin)
 
+	vcov.svyrep.design to simplify computing variances from replicates. (for William Pelham)
+
 3.37	RODBC database connections are no longer supported.
 	Use the DBI-compatible 'odbc' package
 
